--- a/GitIntergration/GitIntergration.csproj
+++ b/GitIntergration/GitIntergration.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\RegisterService.cs" />
+    <Compile Include="Utility\Mail.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
